--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "axios-extensions": "^2.0.2",
     "cloudinary": "^1.11.0",
     "node-sass": "^4.8.3",
     "sass-loader": "^7.0.1",
